Update project configuration and assets for MediaPocket app, including dependency additions, Android and iOS manifest updates, and splash screen enhancements.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   permission_handler: ^11.3.1
   path: ^1.9.0
   path_provider: ^2.1.4
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,6 +69,20 @@ flutter:
 
   assets:
     - assets/images/
+
+flutter_icons:
+  android: true
+  image_path: assets/images/launcher_icon.png
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: assets/images/launcher_icon.png
+
+flutter_native_splash:
+  android: true
+  color: "#FFFFFF"
+  image: assets/images/launcher_icon.png
+  android_12:
+    image: assets/images/launcher_icon.png
+    icon_background_color: "#FFFFFF"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
