--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.4
   flutter_svg: ^2.0.10+1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
